use perfect pixel for mobile homepage

--- a/blocks/engine/__content/engine__content.scss
+++ b/blocks/engine/__content/engine__content.scss
@@ -1,11 +1,11 @@
 .engine__content {
   border-radius: 15px;
   background-color: $color_background_engine;
-  padding: 100px 19px 92px 19px;
+  padding: 104px 20px 92px 13px;
   background-image: url("/blocks/engine/img/engineDecor.png");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 300px;
+  height: auto;
 }
 
 
