--- a/blocks/technologies/__subtitle/technologies__subtitle.scss
+++ b/blocks/technologies/__subtitle/technologies__subtitle.scss
@@ -2,5 +2,8 @@
     font: 500 16px "Gilroy Medium", "Arial", "sans-serif";
     color: $color_text_default;
     text-align: center;
-    margin: 15px 0 40px 0;
+    margin: 17px auto 40px auto ;
+    max-width: 269px;
+    width: 100%;
+    line-height: 20px;
   }
