--- a/blocks/generalInfo/__subtitle/generalInfo__subtitle.scss
+++ b/blocks/generalInfo/__subtitle/generalInfo__subtitle.scss
@@ -1,7 +1,7 @@
 .generalInfo__subtitle {
   font: 500 16px "Gilroy Medium", "Arial", "sans-serif";
-  margin: 0;
   color: $color_text_default;
+  line-height: 20px; 
 }
 
 @media screen and (min-width: 768px) {
