--- a/blocks/generalInfo/__title/generalInfo__title.scss
+++ b/blocks/generalInfo/__title/generalInfo__title.scss
@@ -2,8 +2,10 @@
 
 .generalInfo__title {
   font: 700 30px "Gilroy Bold", "Arial", "sans-serif";
-  margin: 25px 0 15px 0;
+  margin: 35px 0 20px 5px;
   color: $color_text_default;
+  line-height: 30px; 
+  letter-spacing: -0.6px;
 }
 
 @media screen and (min-width: 768px) {
