--- a/blocks/technologies/__description/technologies__description.scss
+++ b/blocks/technologies/__description/technologies__description.scss
@@ -12,10 +12,11 @@
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.25);
   }
 
-  @media screen and (min-width: 390px) {
+  @media screen and (min-width: 380px) {
     .technologies__description {
       padding: 20px 25px;
-      left: 25%;
+      left: 18%;
+      top: 15%;
     }
   }
 
