--- a/blocks/technologies/__title/technologies__title.scss
+++ b/blocks/technologies/__title/technologies__title.scss
@@ -5,4 +5,6 @@
     color: $color_text_default;
     text-align: center;
     margin: 0;
+        line-height: 30px; 
+    letter-spacing: -0.6px; 
   }
