--- a/blocks/engine/__list-item/engine__list-item.scss
+++ b/blocks/engine/__list-item/engine__list-item.scss
@@ -1,8 +1,7 @@
-
 .engine__list-item {
   color: $color_text_1;
   font: 500 16px "Gilroy Medium", "Arial", "sans-serif";
-  line-height: 20px; 
+  line-height: 20px;
 }
 
 .engine__list-item:not(:last-child) {
@@ -14,22 +13,24 @@
 }
 
 @media screen and (min-width: 768px) {
-
   .engine__list-item:last-child {
     margin: 0;
   }
 }
 
 @media screen and (min-width: 1440px) {
-
   .engine__list-item {
     font-size: 20px;
   }
 }
 
 @media screen and (min-width: 1920px) {
-
   .engine__list-item {
     font-size: 24px;
+    line-height: 35px;
+  }
+
+  .engine__list-item:not(:last-child) {
+    margin: 0 0 25px 0;
   }
 }
