--- a/blocks/generalInfo/__title/generalInfo__title.scss
+++ b/blocks/generalInfo/__title/generalInfo__title.scss
@@ -6,6 +6,8 @@
   color: $color_text_default;
   line-height: 30px; 
   letter-spacing: -0.6px;
+  white-space: pre;
+  padding: 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -22,6 +24,7 @@
   .generalInfo__title {
     font-size: 36px;
     line-height: 36px;
+    max-width: 804px;
   }
 }
 
@@ -29,7 +32,6 @@
   .generalInfo__title {
     font-size: 51px;
     line-height: 51px;
-    max-width: 470px;
   }
 }
 
@@ -37,7 +39,6 @@
   .generalInfo__title {
     font-size: 68px;
     line-height: 65px;
-    max-width: 635px;
   }
 }
 
