--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -3,6 +3,11 @@
   margin: 0 0 15px 0;
 }
 
+.header__logo {
+  width: 123px;
+  height: 15px;
+}
+
 .header__content {
   box-sizing: border-box;
   background-color: $color_background_default;
@@ -11,6 +16,7 @@
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   position: relative;
   z-index: 2;
 }
@@ -33,5 +39,26 @@
 
   .header__content {
     padding: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__phone-number {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .header__content {
+    padding: 20px 10px 15px 25px;
+  }
+
+  .header__logo {
+    width: 164px;
+    height: 20px;
+  }
+
+  .header__container {
+    gap: 40px;
   }
 }
