--- a/blocks/technologies/__title/technologies__title.scss
+++ b/blocks/technologies/__title/technologies__title.scss
@@ -1,10 +1,19 @@
 @import "./_color/technologies__title_color.scss";
 
 .technologies__title {
-    font: 700 30px "Gilroy Bold", "Arial", "sans-serif";
-    color: $color_text_default;
-    text-align: center;
-    margin: 0;
-        line-height: 30px; 
-    letter-spacing: -0.6px; 
+  font: 700 30px "Gilroy Bold", "Arial", "sans-serif";
+  color: $color_text_default;
+  text-align: center;
+  margin: 0;
+  line-height: 30px;
+  letter-spacing: -0.6px;
+}
+
+@media screen and (min-width: 1920px) {
+  .technologies__title {
+    font-size: 68px;
+    line-height: 65px; 
+    letter-spacing: -1.36px;
+    margin: 11px 0 0 0;
   }
+}
