--- a/blocks/engine/__content/engine__content.scss
+++ b/blocks/engine/__content/engine__content.scss
@@ -9,19 +9,12 @@
   height: auto;
 }
 
-
 @media screen and (min-width: 768px) {
   .engine__content {
-    padding: 120px 80px 80px 80px;
-  }
-
-}
-
-@media screen and (min-width: 1440px) {
-  .engine__content {
-    padding: 120px 150px;
+    padding: 14% 10% 9% 10%;
   }
 }
+
 
 @media screen and (min-width: 1920px) {
   .engine__content {
