--- a/blocks/engine/__title/engine__title.scss
+++ b/blocks/engine/__title/engine__title.scss
@@ -20,27 +20,29 @@
     line-height: 47px;
     text-align: left;
     font-size: 34px;
-    margin: 0 0 10px 0;
-    top: -55px;
+    top: -40px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .engine__title {
-    margin: 0 0 -20px 0;
-    top: -30px;
+    top: -20px;
   }
 }
 
 @media screen and (min-width: 1440px) {
   .engine__title {
     margin: 0 0 -50px 0;
-    top: 0px;
+    top: -50px;
+    font-size: 48px;
+
   }
 }
 
 @media screen and (min-width: 1920px) {
   .engine__title {
     font-size: 68px;
+    top: 0;
+
   }
 }
