--- a/blocks/generalInfo/__title/generalInfo__title.scss
+++ b/blocks/generalInfo/__title/generalInfo__title.scss
@@ -6,39 +6,28 @@
   color: $color_text_default;
   line-height: 30px; 
   letter-spacing: -0.6px;
-  white-space: pre;
+  white-space: normal;
   padding: 0;
 }
 
 @media screen and (min-width: 768px) {
   .generalInfo__title {
-    font-size: 27px;
-    line-height: 27px;
+    font-size: 40px;
+    line-height: 40px;
     letter-spacing: -1.36px;
     margin: 0;
     max-width: 391px;
+    white-space: pre;
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1300px) {
   .generalInfo__title {
-    font-size: 36px;
-    line-height: 36px;
+    font-size: 68px;
+    line-height: 65px;
     max-width: 804px;
   }
 }
 
-@media screen and (min-width: 1440px) {
-  .generalInfo__title {
-    font-size: 51px;
-    line-height: 51px;
-  }
-}
 
-@media screen and (min-width: 1920px) {
-  .generalInfo__title {
-    font-size: 68px;
-    line-height: 65px;
-  }
-}
 
