--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -235,11 +235,13 @@
   .generalInfo__img {
     display: block;
     width: 45%;
+    height: 250px;
   }
 }
 @media screen and (min-width: 1024px) {
   .generalInfo__img {
     top: 25px;
+    height: auto;
   }
 }
 @media screen and (min-width: 1440px) {
