use pixel perfect for popup on mobile devices

--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -3,4 +3,5 @@
 @import "./__police/form__police.scss";
 @import "./__wrapper-items/form__wrapper-items.scss";
 @import "./__wrapper-bottom/form__wrapper-bottom.scss";
+@import "./__wrapper-input/form__wrapper-input.scss";
 
