--- a/blocks/form/__input/form__input.scss
+++ b/blocks/form/__input/form__input.scss
@@ -8,6 +8,10 @@
   padding: 17px 20px;
 }
 
+.form__input[type="textarea"] {
+  height: 120px;
+}
+
 @media screen and (min-width: 768px) {
   .form__input {
     max-width: 100%;
