--- a/blocks/popup/__title/popup__title.scss
+++ b/blocks/popup/__title/popup__title.scss
@@ -3,6 +3,7 @@
     font: 700 26px "Gilroy Bold", "Arial", "sans-serif";
     color: $color_text_default;
     margin: 0;
+    line-height: 30px;
 }
 
 @media screen and (min-width: 768px) {
