--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -492,7 +492,7 @@
 
 @media screen and (min-width: 380px) {
   .button-get-offer {
-    padding: 18px 97px;
+    padding: 18px 95px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -754,12 +754,11 @@
   position: fixed;
   background-color: #fff;
   border-radius: 15px;
-  width: 90%;
+  width: 92%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  top: 50%;
+  top: 52%;
   left: 50%;
-  max-width: 280px;
   padding: 25px 20px 20px 20px;
 }
 
@@ -785,6 +784,7 @@
   font: 700 26px "Gilroy Bold", "Arial", "sans-serif";
   color: #2B2E3E;
   margin: 0;
+  line-height: 30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -802,7 +802,8 @@
   text-align: center;
   font: 400 14px "Gilroy Regular", "Arial", "sans-serif";
   color: #2B2E3E;
-  margin: 15px 0 25px 0;
+  margin: 16px 0 25px 0;
+  line-height: 20px;
 }
 
 @media screen and (min-width: 768px) {
@@ -847,6 +848,10 @@
   width: 100%;
   height: 55px;
   padding: 17px 20px;
+}
+
+.form__input[type=textarea] {
+  height: 120px;
 }
 
 @media screen and (min-width: 768px) {
@@ -904,6 +909,10 @@
             align-items: center;
   }
 }
+.form__wrapper-input {
+  margin: 0 0 10px 0;
+}
+
 .body {
   background-color: #F0F3F9;
 }
