--- a/blocks/header/header.scss
+++ b/blocks/header/header.scss
@@ -23,6 +23,8 @@
 
 .header__phone-number {
   font: 700 14px "Gilroy Bold", "Arial", "sans-serif";
+  color: $color_text_default;
+  text-decoration: none;
 }
 
 .header__container {
