--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -540,6 +540,8 @@
 
 .header__phone-number {
   font: 700 14px "Gilroy Bold", "Arial", "sans-serif";
+  color: #2B2E3E;
+  text-decoration: none;
 }
 
 .header__container {
