--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -539,7 +539,7 @@
 }
 
 .header__phone-number {
-  font: 700 14px "Gilroy Bold", "Arial", "sans-serif";
+  font: 700 13px "Gilroy Bold", "Arial", "sans-serif";
   color: #2B2E3E;
   text-decoration: none;
 }
@@ -563,6 +563,9 @@
   }
   .header__content {
     padding: 15px;
+  }
+  .header__phone-number {
+    font-size: 14px;
   }
 }
 @media screen and (min-width: 768px) {
