--- a/blocks/button-get-offer/button-get-offer.scss
+++ b/blocks/button-get-offer/button-get-offer.scss
@@ -30,6 +30,7 @@
 
     @media screen and (min-width: 1920px) {
     .button-get-offer {
-        padding: 15px 40px;
+        padding: 15px 45px;
+        max-width: 300px;
     }
   }
