--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -505,7 +505,8 @@
 }
 @media screen and (min-width: 1920px) {
   .button-get-offer {
-    padding: 15px 40px;
+    padding: 15px 45px;
+    max-width: 300px;
   }
 }
 .header {
@@ -762,7 +763,7 @@
   width: 92%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  top: 52%;
+  top: 43%;
   left: 50%;
   padding: 25px 20px 20px 20px;
 }
@@ -782,6 +783,7 @@
   .popup__content {
     max-width: 1061px;
     padding: 55px 60px 65px 60px;
+    top: 47%;
   }
 }
 .popup__title {
@@ -815,6 +817,11 @@
   .popup__subtitle {
     text-align: left;
     font-size: 16px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .popup__subtitle {
+    margin: 34px 0;
   }
 }
 .popup__close-btn {
