--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -569,6 +569,11 @@
     font-size: 14px;
   }
 }
+@-moz-document url-prefix() {
+  .header__phone-number {
+    font-weight: normal;
+  }
+}
 @media screen and (min-width: 768px) {
   .header__phone-number {
     font-size: 18px;
