--- a/blocks/popup/__content/popup__content.scss
+++ b/blocks/popup/__content/popup__content.scss
@@ -7,7 +7,13 @@
     transform: translate(-50%, -50%);
     top: 43%;
     left: 50%;
+    padding: 15px;
+}
+
+@media screen and (min-width: 380px) {
+  .popup__content {
     padding: 25px 20px 20px 20px;
+}
 }
 
 @media screen and (min-width: 768px) {
