--- a/blocks/popup/__content/popup__content.scss
+++ b/blocks/popup/__content/popup__content.scss
@@ -7,7 +7,9 @@
     transform: translate(-50%, -50%);
     top: 43%;
     left: 50%;
-    padding: 15px;
+    padding: 20px;
+     max-height: 90vh; /* устанавливаем максимальную высоту в 80% от высоты окна */
+  overflow-y: auto; 
 }
 
 @media screen and (min-width: 380px) {
