--- a/blocks/popup/popup.scss
+++ b/blocks/popup/popup.scss
@@ -11,8 +11,10 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    overflow: auto;
+    overflow-y: auto;
     background-color: rgba(0,0,0,0.5);
     padding-top: 15px;
     display: none;
 }
+
+
