--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .container {
   margin: 0 auto;
   width: 95%;
@@ -770,7 +771,9 @@
           transform: translate(-50%, -50%);
   top: 43%;
   left: 50%;
-  padding: 15px;
+  padding: 20px;
+  max-height: 90vh; /* устанавливаем максимальную высоту в 80% от высоты окна */
+  overflow-y: auto;
 }
 
 @media screen and (min-width: 380px) {
@@ -860,7 +863,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  overflow: auto;
+  overflow-y: auto;
   background-color: rgba(0, 0, 0, 0.5);
   padding-top: 15px;
   display: none;
