fix position popup

--- a/blocks/popup/__content/popup__content.scss
+++ b/blocks/popup/__content/popup__content.scss
@@ -5,10 +5,10 @@
     border-radius: 15px;
     width: 92%;
     transform: translate(-50%, -50%);
-    top: 43%;
+    top: 54%;
     left: 50%;
     padding: 20px;
-     max-height: 90vh; /* устанавливаем максимальную высоту в 80% от высоты окна */
+     max-height: 90vh; 
   overflow-y: auto; 
 }
 
