--- a/blocks/styles/styles.css
+++ b/blocks/styles/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .container {
   margin: 0 auto;
   width: 95%;
@@ -769,10 +768,10 @@
   width: 92%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  top: 43%;
+  top: 54%;
   left: 50%;
   padding: 20px;
-  max-height: 90vh; /* устанавливаем максимальную высоту в 80% от высоты окна */
+  max-height: 90vh;
   overflow-y: auto;
 }
 
